# sanges

./: .env.example  .gitignore  .gitmodules  CODE.md  Cargo.toml  LICENSE  NOTICE  README.md  THIRD_PARTY_LICENSES.md  build-local.sh  build.rs  build_backend.py  install.sh  pyproject.toml  test.py
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/sagens-box-api/: Cargo.toml
crates/sagens-box-api/src/: lib.rs
crates/sagens-domain/: Cargo.toml
crates/sagens-domain/src/: lib.rs
crates/sagens-guest-agent/: Cargo.toml
crates/sagens-guest-contract/: Cargo.toml
crates/sagens-host/: Cargo.toml
crates/sagens-host/tests/: box_api_auth.rs  box_api_contract.rs  box_api_lifecycle.rs  box_api_lineage.rs  box_shutdown.rs  e2e_libkrun.rs  runtime_lifecycle.rs
crates/sagens-host/tests/support/: client.rs  e2e.rs  mod.rs  runtime_mock.rs  service.rs  spawn.rs
crates/sagens-host/tests/support/service/: checkpoints.rs  records.rs  state.rs
crates/sagens-libkrun/: Cargo.toml
crates/sagens-libkrun/src/: lib.rs
crates/sagens-libkrunfw/: Cargo.toml  build.rs
crates/sagens-libkrunfw/src/: lib.rs
crates/upstream-arch/: Cargo.toml
crates/upstream-arch-gen/: Cargo.toml
crates/upstream-cpuid/: Cargo.toml
crates/upstream-devices/: Cargo.toml  build.rs
crates/upstream-devices/src/: hvfgicv3.rs
crates/upstream-hvf/: Cargo.toml  build.rs
crates/upstream-hvf/src/: weak_hypervisor.c
crates/upstream-kernel/: Cargo.toml
crates/upstream-libkrun/: Cargo.toml  build.rs
crates/upstream-polly/: Cargo.toml
crates/upstream-smbios/: Cargo.toml
crates/upstream-utils/: Cargo.toml
crates/upstream-vmm/: Cargo.toml  build.rs
docs/: README.md  mental-model.md  python-api.md  quickstart-cli.md  quickstart-node.md  quickstart-python.md  support-matrix.md  troubleshooting.md  why-sagens.md
docs/recipes/: box-scoped-access.md  checkpoints-and-forks.md  persistent-workspaces.md
guest-agent/src/: main.rs
guest-agent/src/guest_agent/: bootstrap.rs  fs.rs  linux_boot.rs  linux_exec.rs  linux_server.rs  mod.rs  pty.rs  rpc.rs  stats.rs
macos/: sagens.entitlements
node/: README.md  package-lock.json  package.json  tsconfig.json
node/src/: binary.ts  box.ts  client.ts  daemon.ts  decode.ts  errors.ts  index.ts  models.ts  queue.ts  shell.ts  transport.ts
node/tests/: e2e.mjs  helpers.mjs  smoke.mjs
ops/arc/: xenage-sanges-kvm-runnerset.yaml
python/: Cargo.toml  README.md  pyproject.toml
python/sagens/: __init__.py  _binary.py  _box.py  _client.py  _daemon.py  _decode.py  _download.py  _errors.py  _models.py  _shell.py  _transport.py  _websocket.py
python/sagens/_bin/: README.md
python/src/: daemon.rs  error.rs  lib.rs  runtime.rs  test_server.rs
python/src/stub/: checkpoints.rs  exec.rs  mod.rs  shell.rs  state.rs
python/tests/: conftest.py  support.py  test_checkpoint_lineage.py  test_e2e.py  test_smoke.py
scripts/: cargo_fmt_workspace.py  cc-linux.sh  check_code_limits.py  e2e-checkpoint.sh  e2e-logging.sh  e2e-standalone-smoke.sh  e2e-standalone.sh  measure_box_start.py  package-standalone.sh
shared/src/: error.rs  guest_rpc.rs  lib.rs  protocol.rs
shared/src/workspace/: manifest.rs  mod.rs  path.rs
src/: auth.rs  bundle.rs  config.rs  daemon_api.rs  embedding.rs  error.rs  guest_transport.rs  host_hardening.rs  host_log.rs  lib.rs  protocol.rs
src/auth/: tests.rs
src/backend/: mod.rs
src/backend/libkrun/: config.rs  instance.rs  loader.rs  mod.rs  qemu_hvf.rs  runner.rs
src/backend/libkrun/loader/: kernel.rs  tests.rs
src/box_api/: mod.rs  protocol.rs
src/box_api/client/: checkpoints.rs  exec.rs  mod.rs  ops.rs  shell.rs  state.rs  terminal.rs  tty.rs
src/box_api/client/ops/: admin.rs  files.rs
src/box_api/server/: checkpoints.rs  dispatch.rs  execution.rs  mod.rs
src/box_api/server/dispatch/: access.rs
src/boxes/: helpers.rs  mod.rs  store.rs  types.rs
src/boxes/service/: manager.rs  mod.rs  policy.rs  record.rs
src/config/: tests.rs
src/guest_rpc/: mod.rs
src/guest_rpc/client/: driver.rs  mod.rs  reader.rs
src/runtime/: mod.rs  registry.rs  types.rs
src/runtime/service/: lifecycle.rs  mod.rs  ops.rs
src/sagens/: app.rs  client.rs  config.rs  daemon.rs  mod.rs  output.rs  recovery.rs  ui.rs  update.rs
src/sagens/args/: help.rs  help_pages.rs  mod.rs  parse.rs  parse_box.rs  tests.rs
src/sagens/output/: cells.rs  format.rs  lists.rs  tests.rs
src/sagens/update/: platform.rs  tests.rs
src/workspace/: checkpoints.rs  lineage.rs  mod.rs  store.rs
src/workspace/checkpoints/: tests.rs
xtask/: Cargo.toml
