[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Build, packaging, and signing automation for sagens."
readme = "../README.md"
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "xtask"
path = "../src/bin/xtask.rs"

[dependencies]
anyhow.workspace = true
libloading.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
