[package]
name = "sagens-box-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Canonical box_api protocol and shared transport constants for sagens."
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
