[package]
name = "sagens-guest-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Guest-side execution agent for sagens."
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[[bin]]
name = "sagens-guest-agent"
path = "../../guest-agent/src/main.rs"

[dependencies]
libc.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tokio-vsock.workspace = true
uuid.workspace = true
sagens-guest-contract.workspace = true
