[package]
name = "sagens-guest-contract"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Shared host-guest wire contract for sagens."
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[lib]
name = "sagens_guest_contract"
path = "../../shared/src/lib.rs"

[dependencies]
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
