[package]
name = "sagens-libkrun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Thin libkrun adapter boundary for sagens."
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]
