[package]
name = "sagens-libkrun"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Thin libkrun adapter boundary for sagens."
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
publish.workspace = true

[dependencies]

[target.'cfg(target_os = "linux")'.dependencies]
upstream-libkrun = { package = "libkrun", path = "../upstream-libkrun", default-features = false, features = ["blk"] }

[target.'cfg(all(target_os = "linux", any(target_arch = "x86_64", target_arch = "aarch64")))'.dependencies]
sagens-libkrunfw = { path = "../sagens-libkrunfw" }

[target.'cfg(target_os = "macos")'.dependencies]
upstream-libkrun = { package = "libkrun", path = "../upstream-libkrun", default-features = false, features = ["efi"] }
