[package]
name = "sagens-libkrunfw"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Statically linked libkrunfw kernel bundle for sagens."
readme = "../../README.md"
repository.workspace = true
homepage.workspace = true
publish.workspace = true
build = "build.rs"

[build-dependencies]
libloading = "0.8"

