[package]
name = "devices"
version = "0.1.100"
authors = ["The Chromium OS Authors"]
edition = "2021"
build = "build.rs"

[features]
tee = []
amd-sev = ["blk", "tee"]
tdx = ["blk", "tee"]
net = []
blk = []
efi = ["blk", "net"]
gpu = []
snd = []
input = []
virgl_resource_map2 = []
aws-nitro = []
test_utils = []

[dependencies]
bitflags = "1.2.0"
crossbeam-channel = ">=0.5.15"
libc = ">=0.2.39"
log = "0.4.0"
nix = { version = "0.30.1", features = ["ioctl", "net", "poll", "socket", "fs"] }
rand = "0.9.2"
virtio-bindings = "0.2.0"
vm-memory = { version = "0.17", features = ["backend-mmap"] }

arch = { path = "../upstream-arch" }
utils = { path = "../upstream-utils" }
polly = { path = "../upstream-polly" }
imago = { version = "0.2.2", features = ["sync-wrappers", "vm-memory"] }

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../upstream-hvf" }
lru = ">=0.9"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.5"
kvm-bindings = { version = "0.12", features = ["fam-wrappers"] }
kvm-ioctls = "0.22"

[target.'cfg(any(target_arch = "aarch64", target_arch = "riscv64"))'.dependencies]
vm-fdt = ">= 0.2.0"
