[package]
name = "libkrun"
version = "1.17.3"
authors = ["The libkrun Authors"]
edition = "2021"
build = "build.rs"

[features]
tee = ["vmm/tee", "devices/tee"]
amd-sev = ["blk", "tee", "vmm/amd-sev", "devices/amd-sev"]
tdx = ["blk", "tee", "vmm/tdx", "devices/tdx"]
net = ["devices/net", "vmm/net"]
blk = ["devices/blk", "vmm/blk"]
efi = ["blk", "net", "vmm/efi", "devices/efi"]
gpu = []
snd = []
input = []
virgl_resource_map2 = ["devices/virgl_resource_map2"]
aws-nitro = []

[dependencies]
crossbeam-channel = ">=0.5.15"
env_logger = "0.11"
libc = ">=0.2.39"
log = "0.4.0"
once_cell = "1.4.1"

devices = { path = "../upstream-devices" }
polly = { path = "../upstream-polly" }
utils = { path = "../upstream-utils" }
vmm = { path = "../upstream-vmm" }
rand = "0.9.2"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../upstream-hvf" }

[target.'cfg(target_os = "linux")'.dependencies]
kvm-bindings = { version = "0.12", features = ["fam-wrappers"] }
kvm-ioctls = "0.22"
vm-memory = { version = "0.17", features = ["backend-mmap"] }

[lib]
name = "krun"
crate-type = ["lib"]
