[package]
name = "vmm"
version = "0.1.100"
authors = ["Amazon Firecracker team <firecracker-devel@amazon.com>"]
edition = "2021"
build = "build.rs"

[features]
tee = ["devices/tee", "arch/tee"]
amd-sev = ["blk", "bitfield", "bitflags", "iocuddle", "tee", "kbs-types", "serde", "serde_json", "devices/amd-sev", "arch/amd-sev"]
tdx = ["blk", "tee", "kbs-types", "serde", "serde_json", "dep:tdx", "devices/tdx", "arch/tdx", "cpuid/tdx"]
net = ["devices/net"]
blk = ["devices/blk"]
efi = ["blk", "net", "devices/efi", "arch/efi"]
gpu = []
snd = []
input = []
aws-nitro = []

[dependencies]
crossbeam-channel = ">=0.5.15"
flate2 = "1.0.35"
libc = ">=0.2.39"
linux-loader = { version = "0.13.2", features = ["bzimage", "elf", "pe"] }
log = "0.4.0"
nix = { version = "0.30.1", features = ["fs", "term"] }
vm-memory = { version = "0.17.0", features = ["backend-mmap"] }
vmm-sys-util = "0.14"

arch = { path = "../upstream-arch" }
arch_gen = { path = "../upstream-arch-gen" }
devices = { path = "../upstream-devices" }
kernel = { path = "../upstream-kernel" }
utils = { path = "../upstream-utils" }
polly = { path = "../upstream-polly" }

kbs-types = { version = "0.13.0", optional = true }
serde = { version = "1.0.125", optional = true }
serde_json = { version = "1.0.64", optional = true }
iocuddle = { version = "0.1.1", optional = true }
bitfield = { version = "0.19.4", optional = true }
bitflags = { version = "2.10.0", optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
bzip2 = "0.5"
cpuid = { path = "../upstream-cpuid" }
zstd = "0.13"

[target.'cfg(target_os = "linux")'.dependencies]
tdx = { version = "0.1.0", optional = true }
kvm-bindings = { version = "0.12", features = ["fam-wrappers"] }
kvm-ioctls = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
hvf = { path = "../upstream-hvf" }

[dev-dependencies]
devices = { path = "../upstream-devices", features = ["test_utils"] }
